--- a/projectPikcha/page1.html
+++ b/projectPikcha/page1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="page1.css">
-    <link rel="stylesheet" href="pikcha.css">
+    <link rel="stylesheet" href="captcha.css">
 </head>
 
 <body>
@@ -38,13 +38,13 @@
             </div>
         </div>
     </div>
-    <div class="formPikcha" id="formPikcha">
+    <div class="formCaptcha" id="formCaptcha">
         <h3>Подтвердите, что вы не робот</h3>
-        <div class="pikcha" id="pikcha">
-            <img src="pikcha\1.png"  alt="">
-            <img src="pikcha\2.png"  alt="">
-            <img src="pikcha\3.png"  alt="">
-            <img src="pikcha\4.png" alt="">
+        <div class="captcha" id="captcha">
+            <img src="captcha\1.png"  alt="">
+            <img src="captcha\2.png"  alt="">
+            <img src="captcha\3.png"  alt="">
+            <img src="captcha\4.png" alt="">
         </div>
 
         <div class="button">
@@ -53,7 +53,7 @@
         </div>
     </div>
     <script src="script.js"></script>
-    <script src="pikcha.js"></script>
+    <script src="captcha.js"></script>
 </body>
 
 </html>
